[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashvsr-long-video-runner"
version = "0.1.0"
description = "Safe long-video wrapper around upstream FlashVSR with explicit chunk manifests and resume support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "OpenClaw"}
]
dependencies = [
  "imageio>=2.34",
  "Pillow>=10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
flashvsr-long-video = "flashvsr_long_video_runner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
